--- a/public/assets/style-home.css
+++ b/public/assets/style-home.css
@@ -1,125 +1,124 @@
-*{
+* {
   margin: 0%;
-  padding: 0% ;
+  padding: 0%;
   box-sizing: content-box;
 }
 
 .Encabezado {
-    background-color:  #1538ac;
-    display:grid;
-    grid-template-columns:  80% 10% 10%;
-    height: 50%;
-    margin: 0 auto; 
-  
-  }
-  .Encabezado h1 {
-    color: white;
-    font-size: 300%;
-    padding-top: 5%;
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
-    margin: 0; 
-    align-items: center;
-    
-   
-  }
-  .Titulo{
-    margin-left: 15%;
-     display: inline-block;
-     position: left;
-     text-align: left;
-  }
-  .userLogo{
-      display: inline-block;
-      position: center;
-      
-  }
-  
-  .userLogo img{
-      margin :20% ;
-      width: 50%;
-      height: 60%;
-      
-  }
-  .userLogo img :hover{
-    transition: 0.3s;
+  background-color: #1538ac;
+  display: grid;
+  grid-template-columns: 80% 10% 10%;
+  height: 50%;
+  margin: 0 auto;
+}
 
-  }
- .Usuario{
-       margin-top: 45%;
-       margin-left: -15%;
-       display: inline-block;
-       position: right;
-       color : White ;
- }
- .Usuario :hover{
-       color : rgb(32, 223, 236) ;
+.Encabezado h1 {
+  color: white;
+  font-size: 300%;
+  padding-top: 5%;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  margin: 0;
+  align-items: center;
 }
-  
+
+.Titulo {
+  margin-left: 15%;
+  display: inline-block;
+  position: left;
+  text-align: left;
+}
+
+.userLogo {
+  display: inline-block;
+  position: center;
+}
+
+.userLogo img {
+  margin: 20%;
+  width: 50%;
+  height: 60%;
+}
+
+.userLogo img:hover {
+  transition: 0.3s;
+}
+
+.Usuario {
+  margin-top: 45%;
+  margin-left: -15%;
+  display: inline-block;
+  position: right;
+  color: White;
+}
+
+.Usuario:hover {
+  color: rgb(32, 223, 236);
+}
+
 .Menu {
-    height: 30%; 
+  height: 30%;
 }
+
 .Menu li a img {
   margin: 2%;
   height: 12%;
   width: 12%;
 }
+
 .Prueba {
   margin-top: 56%;
 }
+
 .Prueba li a img {
   height: 12%;
   width: 12%;
   margin-right: 3%;
 }
 
-  
- body{
-  margin:0;
-  padding:0;
-  font-family:Arial;
-  background:white;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial;
+  background: white;
 }
 
-.logo{
-  padding:20px ;
+.logo {
+  padding: 20px;
   margin-bottom: 90px;
 }
-.logo img{
- 
+
+.logo img {
   height: 100px;
   width: 240px;
   margin-left: -30px;
- 
 }
 
-
-nav ul{
-  margin:0;
-  padding:0;
-  height:100%;
-  width:240px;
-  position:fixed;
-  top:0;
-  left:0;
+nav ul {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 240px;
+  position: fixed;
+  top: 0;
+  left: 0;
   background-color: #1538ac;
 }
 
-nav ul li{
-  list-style:none;
+nav ul li {
+  list-style: none;
 }
 
-
-nav ul li a{
-  display:block;
-  font-family:'montserrat';
-  text-decoration:none;
-  text-transform:uppercase;
-  font-size:17px;
-  color:#fff;
-  position:relative;
-  padding:15px 0px 15px 25px;
-  transition:all 0.5s;
+nav ul li a {
+  display: block;
+  font-family: 'montserrat';
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 17px;
+  color: #fff;
+  position: relative;
+  padding: 15px 0px 15px 25px;
+  transition: all 0.5s;
 }
 
 nav ul li a:before {
@@ -135,37 +134,28 @@ nav ul li a:before {
   width: 0;
 }
 
-
-nav ul li a:hover{
-  color:#0d1186;
-}
-
-nav ul li a:hover:before{
-  width:95%;
-}
-
-
-.wrapper{
-  margin-left:260px;
-}
-
-section{
-background-color: white;
-}
-.box-area h2{
-  text-transform:uppercase;
-  font-size:30px;
-}
-
-.Principal{
-  margin-top: 5%;
-  padding: 0.5%;
-}
-.Principal h2{
+nav ul li a:hover {
   color: #0d1186;
-  font-weight: 400;
-  
 }
+
+nav ul li a:hover:before {
+  width: 95%;
+}
+
+.wrapper {
+  margin-left: 260px;
+}
+
+section {
+  background-color: white;
+}
+
+.box-area h2 {
+  text-transform: uppercase;
+  font-size: 30px;
+}
+
+/* SECCIÓN GROUP */
 .Group{
   
   display: grid;
@@ -296,162 +286,149 @@ background-color: white;
   position: Right;
   align-items: center;
 }
-.Principal{
-  height:60vh;
+
+/* SECCIÓN PRINCIPAL */
+.Principal {
   display: grid;
-  grid-template-columns: 70% 30%;
-  margin-top: -0.2%;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  margin: 20px 0;
+  height: auto;
 }
-.Principal-Left{
+
+.Principal-Left {
   background-color: rgb(241, 244, 248);
-  height: 40vh auto ;
+  height: auto;
   text-align: center;
   margin: 2%;
   border-radius: 2%;
   font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
+
 .Principal-Right {
   display: grid;
-  grid-template-rows: 1fr 1fr; 
+  grid-template-rows: auto auto;
+  gap: 20px;
   background-color: rgb(241, 244, 248);
-  height: 40vh auto;
+  height: auto;
   text-align: center;
   margin: 2%;
   border-radius: 2%;
+  padding: 20px;
 }
 
-.Principal-Arriba {
-  margin: 2%;
+.Principal-Arriba, .Principal-Abajo {
   background-color: #ffffff;
-  border-radius: 2%;
+  border-radius: 8px;
+  padding: 15px;
 }
 
-.Principal-Abajo {
-  margin: 2%;
-  background-color: #fdfdfd;
-  border-radius: 2%;
-}
-
-
-.Principal-Left h2 {
-  color: #0847f5;
-  margin-bottom: 15px;
-  text-align: center;
-}
-
-#graficaBarrasPrestamos {
-  width: 100% !important;
-  height: auto !important;
-  max-height: 400px;
-}
-footer{
+.Principal h2 {
   color: #0d1186;
+  font-weight: 400;
+  margin-bottom: 15px;
 }
+
+.Principal-Arriba img {
+  width: 140px;
+  height: 140px;
+  margin: 5%;
+}
+
+/* Contenedor de la gráfica */
+.chart-container {
+  flex: 1;
+  width: 100%;
+  min-height: 400px;
+  position: relative;
+}
+
+#graficaPrestamosMensuales {
+  width: 100% !important;
+  height: 100% !important;
+}
+
+/* FOOTER */
+footer {
+  background-color: #1538ac;
+  color: white;
+  text-align: center;
+  padding: 15px;
+  margin-top: 20px;
+  border-radius: 8px;
+}
+
+/* Media queries */
 @media (min-width: 1800px) {
   .Menu {
-    height: 65%; 
+    height: 65%;
   }
+  
   .Menu li a img {
     margin: 3%;
     height: 15%;
     width: 15%;
   }
+  
   .Prueba {
     margin-top: 5%;
   }
+  
   .Prueba li a img {
     height: 5%;
     width: 15%;
     margin-right: 3%;
   }
+  
   .Group h1 {
-    font-size: 300%;
-    margin-top: 30%;
-  }
-  .Group img {
-    width: 80%;
-    height: 60%;
-    margin-left: 10%;
-    margin-top: 45%;
+    font-size: 2.5rem;
   }
 }
+
+@media (min-width: 992px) {
+  .Principal {
+    grid-template-columns: 70% 30%;
+  }
+}
+
 @media (max-width: 1400px) {
   .Group h1 {
-    font-size: 160%;
-    margin-top: 30%;
-  }
-  .Group img {
-    width: 80%;
-    height: 50%;
-    margin-left: 10%;
-    margin-top: 45%;
+    font-size: 1.3rem;
   }
 }
-
-
 
 @media (max-width: 1200px) {
-  .Group h1 {
-    font-size: 160%;
-    margin-top: 0%;
-  }
-  .Group img {
-    width: 80%;
-    height: 50%;
-    margin-left: 10%;
-    margin-top: 65%;
+  .Group {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
-
-@media (max-width: 1000px) {
-  .Group h1 {
-    font-size: 120%;
-    margin-top: 60%;
+@media (max-width: 768px) {
+  .Principal-Right {
+    grid-template-rows: auto;
   }
-  .Group img {
-    width: 80%;
-    height: 50%;
-    margin-left: 10%;
-    margin-top: 105%;
+  
+  .Principal-Arriba, .Principal-Abajo {
+    margin-bottom: 15px;
   }
 }
-
-
-@media (max-width: 800px) {
-  .Group h1 {
-    font-size: 100%;
-    margin-top: 80%;
-  }
-  .Group img {
-    width: 80%;
-    height: 40%;
-    margin-left: 10%;
-    margin-top: 125%;
-  }
-}
-
 
 @media (max-width: 600px) {
-  .Group h1 {
-    font-size: 80%;
-    margin-top: 280%;
+  .Group {
+    grid-template-columns: 1fr;
   }
-  .Group img {
-    width: 40%;
-    height: 30%;
-    margin-left: 10%;
-    margin-top: 500%;
-  }
+  
   .userLogo img {
     margin: 60%;
     width: 100%;
     height: 50%;
   }
+  
   .Usuario {
     margin-top: 45%;
     margin-left: 105%;
-    display: inline-block;
-    color: white;
   }
 }
